# ethsnarks

./: .gitignore  Makefile
examples/: genkeys.py  off_chain_signal.py
snarkWrapper/: deploy.py
src/: .gitignore  CMakeLists.txt  main_genKeys.cpp  miximus.cpp  miximus.hpp
src/ZoKrates/: wraplibsnark.cpp
utils/: fedora-deps.sh
zksnark_element/: vk.json
